Add logout button.

--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/common/components/sidebar/sidebar.component.html
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/common/components/sidebar/sidebar.component.html
@@ -4,3 +4,8 @@
 <div>
     <module-list></module-list>
 </div>
+<footer class="ml16 mb20">
+    <button type="button" (click)="logout()" class="ml16 menu-item logout-btn">
+        Logout<svg icon="person"></svg>
+    </button>
+</footer>
