--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/login/login.component.html
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <form action="" class="login-form" [formGroup]="form" (ngSubmit)="onSubmit($event)">
     <h1 class="h1 mb60 login_logo-wrapper">
-        <img src="/assets/svg/logo.svg" alt="devima" />
+        <img class="login-logo" src="/assets/svg/logo.svg" alt="devima" />
     </h1>
     <label class="control-label mb16">
         Login
