--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/module/module-list.component.css
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/module/module-list.component.css
@@ -27,6 +27,7 @@
     width: 299px;
     text-align: left;
     border-radius: 2px;
+    text-decoration: none;
 }
 .menu-item:hover, :focus-visible{
     background: var(--dark-hover-color);
