--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/login/login.component.css
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/login/login.component.css
@@ -14,7 +14,7 @@
     min-width: 150px;
     height: 150px;
     padding-top: 50px;
-    padding-left: 100px;
+    padding-left: 20%;
 }
 .login_logo-talk-me{
     height: 80px;
