--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/feedback/feedback-list.component.html
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/feedback/feedback-list.component.html
@@ -1,10 +1,13 @@
-<button matButton class="mb20 align-right" (click)="addFeedback()">Add</button>
 <table>
     <thead>
         <td>id</td>
         <td>comment</td>
         <td>rating</td>
+        <td>publish date</td>
         <td>module</td>
+        <td>
+            <button matButton class="mb20 align-right" (click)="addFeedback()">Add</button>
+        </td>
     </thead>
     <tbody>
         @for (feedback of feedbacks(); track feedback.id){
@@ -12,8 +15,13 @@
                 <td>{{feedback.id}}</td>
                 <td>{{feedback.comment}}</td>
                 <td>{{feedback.rating}}</td>
+                <td>{{feedback.publishDate.seconds * 1000 | date}}</td>
                 <td>{{feedback.moduleId}}</td>
-                <td>operation</td>
+                <td>
+                    <button (click)="removeFeedback(feedback)" type="button" class="operation-btn">
+                        <svg icon="trash"></svg>
+                    </button>
+                </td>
             </tr>
         }
     </tbody>
