--- a/DevimaFeedbackSystem/Client/feedback-app/src/styles.css
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/styles.css
@@ -143,6 +143,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     float: right;
 }
 .operation-btn{
+    color: var(--light-color);
+    font-weight: 400;
+    font-family: Roboto "Helvetica Neue" sans-serif;
+    font-size: 18px;
     background: none;
     border: none;
     cursor: pointer;
