--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/module/module-list.component.html
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/module/module-list.component.html
@@ -2,7 +2,7 @@
     <ul class="main-menu-list">
         @for (module of modules(); track module.id){
             <li class="module">
-                <a [routerLink]="['module/', module.id]" routerLink="active" class="menu-item">
+                <a [routerLink]="['module/', module.id]" routerLinkActive="menu-item-active" [routerLinkActiveOptions]="{ exact: true }" class="menu-item">
                     <div class="ml16 menu-item-header">{{module.name}}</div>
                 </a>
             </li>
