Add average score and total values for module.

--- a/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/feedback/feedback-list.component.css
+++ b/DevimaFeedbackSystem/Client/feedback-app/src/app/pages/home/feedback/feedback-list.component.css
@@ -4,3 +4,10 @@ table{
 .negative-feedback{
     background-color: var(--primary-color);
 }
+.footer-wrapper{
+    width: 100%;
+}
+.footer-item{
+    float: right;
+    margin: 10px;
+}
